--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Red Hat Display', sans-serif; */
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -21,4 +20,41 @@
     font-size: 1.5rem;
     font-weight: bold;
     max-width: 20%
+}
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.hero h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: white;
+    font-family: 'Red Hat Display', sans-serif;
+    text-align: center;
+}
+
+.hero p {
+    font-size: 1rem;
+    color: white;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    max-width: 600px; 
+    line-height: 1.5; 
+}
+
+.button {
+    padding: 0.8rem 2rem;
+    background: #27AE60;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    z-index: 1;
 }
