--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,84 @@
 .button:hover {
     background: #F78BD8;
 }
+
+.main {
+    padding: 4rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.main h2 {
+    text-align: center;
+    margin: 3.5rem;
+    font-size: 2.25rem;
+    font-family: 'Red Hat Display', sans-serif;
+    letter-spacing: 2px;
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+    margin-bottom: 3rem;
+}
+
+.card {
+    overflow: hidden;
+    position: relative;
+}
+
+.card-img {
+    position: relative;
+}
+
+.card img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.tag {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 0.3rem 1rem;
+    background-color: #FF69B4;
+    color: white;
+    border-radius: 20px;
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
+    z-index: 1; 
+}
+
+.card-content {
+    padding: 1rem;
+}
+
+.date {
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
+}
+
+
+.tag-b {
+    background-color: #27AE60; 
+}
+
+.cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.button-cta {
+    padding: 0.8rem 2rem;
+    background: #27AE60;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+
+}
