--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,46 @@
     background: white;
 }
 
-.header .logo {
+
+.nav {
+        display: flex;
+        gap: 10px;
+        padding: 10px;
+        margin: 10px;
+}
+
+
+
+.logo {
     display: flex;
     align-items: center;
     gap: 0.5rem;
     font-size: 1.5rem;
     font-weight: bold;
-    max-width: 20%
+    width: 20%;
 }
+
+@media (max-width: 768px) {
+    .logo {
+        width: 30%; /* El logo ocupará el 30% del ancho de la pantalla en pantallas pequeñas */
+    }
+}
+
+.nav-toggle img {
+    display: none;
+}
+@media (max-width: 768px) {
+    .nav-toggle img {
+        display: block;
+        width: 25%; 
+        margin-left: auto;
+        
+    }
+    .nav {
+        display: none;
+    }
+}
+
 .hero {
     display: flex;
     justify-content: center;
