--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,6 @@
 }
 
 
-.nav {
-        display: flex;
-        gap: 10px;
-        padding: 10px;
-        margin: 10px;
-}
-
-
-
 .logo {
     display: flex;
     align-items: center;
@@ -34,17 +25,53 @@
 
 @media (max-width: 768px) {
     .logo {
-        width: 30%; /* El logo ocupará el 30% del ancho de la pantalla en pantallas pequeñas */
+        width: 60%; 
     }
 }
 
-.nav-toggle img {
-    display: none;
-}
-@media (max-width: 768px) {
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .nav {
+    display: flex;
+    gap: 20px;
+    padding: 10px;
+    margin: 10px;
+  }
+  
+  .nav p {
+    cursor: pointer;
+  }
+  
+  .nav-toggle {
+    display: none; 
+  }
+  
+  @media (max-width: 768px) {
+    .nav {
+      display: none; 
+    }
+    .nav.show {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 10px;
+      background-color: white; /* Mostrado cuando se hace clic en el icono */
+    }
+    .nav-toggle {
+      display: block; /* Mostramos el icono en pantallas pequeñas */
+    }
+   
     .nav-toggle img {
         display: block;
-        width: 25%; 
+        width: 50%; 
         margin-left: auto;
         
     }
@@ -52,6 +79,7 @@
         display: none;
     }
 }
+  
 
 .hero {
     display: flex;
@@ -61,7 +89,11 @@
     height: 100vh;
     background-size: cover;
     background-position: center;
+    width: '100%';
+    background-image: url('https://tf-frontend.netlify.app/images/v1/bgimage.png');
 }
+
+
 
 .hero h1 {
     font-size: 2.5rem;
@@ -87,12 +119,23 @@
     background: #27AE60;
     color: white;
     border: none;
-    border-radius: 4px;
     text-decoration: none;
     z-index: 1;
 }
+.button-2 {
+    padding: 0.8rem 2rem;
+    background: black;
+    color: white;
+    border: none;
+    text-decoration: none;
+    z-index: 1;
+    
+}
 
 .button:hover {
+    background: #F78BD8;
+}
+.button-2:hover {
     background: #F78BD8;
 }
 
